Bump verison and Passing unit tests