@@ -3,23 +3,29 @@
   #%L
   OfficeFloor SAM Maven Plugin
   %%
-  Copyright (C) 2005 - 2021 Daniel Sagenschneider
+  Copyright (C) 2005 - 2021
+Daniel Sagenschneider
   %%
-  Licensed under the Apache License, Version 2.0 (the "License");
+  Licensed under the Apache License, Version 2.0 (the
+"License");
   you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
+You may obtain a copy of the License at
+http://www.apache.org/licenses/LICENSE-2.0
   
-       http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
+  Unless required by applicable
+law or agreed to in writing, software
+  distributed under the License is
+distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+either express or implied.
+  See the License for the specific language governing
+permissions and
   limitations under the License.
   #L%
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.officefloor.maven.test</groupId>
@@ -91,7 +97,8 @@
 				<version>3.2.4</version>
 				<configuration>
 					<transformers>
-						<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 					</transformers>
 				</configuration>
 				<executions>
@@ -147,6 +154,9 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<version>2.22.2</version>
+						<configuration>
+							<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+						</configuration>
 						<executions>
 							<execution>
 								<goals>
